--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-src/redux
+src/redux/
+src/components/
 
 # Typescript v1 declaration files
 typings/
