--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kenote-react-cli",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "cli for react",
   "main": "index.js",
   "preferGlobal": true,
@@ -11,7 +11,8 @@
     "commander": "^2.11.0",
     "fs-extra": "^4.0.2",
     "inquirer": "^3.3.0",
-    "kenote-mount": "^1.0.1"
+    "kenote-mount": "^1.0.1",
+    "runscript": "^1.3.0"
   },
   "bin": {
     "node-react": "./bin/index.js"
